--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body {
     text-align: center;
 }
 
-.ms_container h1 {
+.ms_container h1, 
+.ms_container h3 {
     text-transform: uppercase;
     color: white;
 }
@@ -35,4 +36,13 @@ input,
 select {
     border: 2px solid #b91450;
     border-radius: 5px;
+}
+
+.ms_button {
+    padding: .2rem .6rem;
+    margin: 0 .2rem;
+    border-radius: 5px;
+    font-weight: 500;
+    background-color: lightgrey;
+    color: #b91450;
 }
